# energy-demand-forecast

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  main.py  make_plot.py  pyproject.toml  requirements.in  requirements.txt  streamlit.py
.devcontainer/: Dockerfile
.github/workflows/: download_train.yml
data/final/: ts.csv
data/interim/: energy_load.csv
data/raw/: Total Load - Day Ahead _ Actual_201812312300-201912312300.csv  (+164 more)
figs/: diagram.drawio  diagram.mmd
models/: lgbm_forecaster_0.joblib  lgbm_forecaster_1.joblib  lgbm_forecaster_10.joblib  lgbm_forecaster_11.joblib  lgbm_forecaster_12.joblib  lgbm_forecaster_13.joblib  lgbm_forecaster_14.joblib  lgbm_forecaster_15.joblib  lgbm_forecaster_16.joblib  lgbm_forecaster_17.joblib  lgbm_forecaster_18.joblib  lgbm_forecaster_19.joblib  lgbm_forecaster_2.joblib  lgbm_forecaster_20.joblib  lgbm_forecaster_21.joblib  lgbm_forecaster_22.joblib  lgbm_forecaster_23.joblib  lgbm_forecaster_24.joblib  lgbm_forecaster_25.joblib  lgbm_forecaster_26.joblib  lgbm_forecaster_27.joblib  lgbm_forecaster_3.joblib  lgbm_forecaster_37.joblib  lgbm_forecaster_38.joblib  lgbm_forecaster_4.joblib  lgbm_forecaster_5.joblib  lgbm_forecaster_6.joblib  lgbm_forecaster_7.joblib  lgbm_forecaster_8.joblib  lgbm_forecaster_9.joblib
notebooks/: 0_exploratory_data_analysis.ipynb  1_model_selection.ipynb
output/: template.html
scripts/: merge_raw_files.sh
src/: config.py  data.py  features.py  figure.py  io.py  logger.py  models.py  period.py  preprocessing.py  utils.py  visualization.py
